[package]
name = "a"
version = "0.1.0"
edition = "2021"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
surf = { version = "2.3.2", default-features = false, features = ["h1-client-rustls"] }

[target.'cfg(target_family = "wasm")'.dependencies]
surf = { version = "2.3.2", default-features = false, features = ["wasm-client"] }
